--- a/src/global.less
+++ b/src/global.less
@@ -36,4 +36,22 @@ body{
     }
   }
 
+  #icon-background{
+    overflow-x: hidden;
+    height: 1200px;
+    width: 560px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    .icon-restlab{
+      position: absolute;
+      top: 200px;
+      right: -200px;
+      color: #fff;
+      opacity: 0.3;
+      font-size: 1000px;
+    }
+  }
+
+
 }
